<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FacebookPost"
    >
    <EditText
        android:id="@+id/search_box"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:padding="10dp"
        android:maxLines="1"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/search"
         android:textColorHint="@color/black"
        android:layout_marginHorizontal="10dp"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="6dp"
        android:inputType="text"/>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/search_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:paddingVertical="10dp"
        android:weightSum="5"
        android:layout_height="wrap_content"
        android:id="@+id/linear">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mockup"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fonts"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/templates"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colors"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"/>

    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp">
    <TextView
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainHeader"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/facebook_mobile_post_mochup_psd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/post_image"
        app:layout_constraintWidth_percent="1"
        android:adjustViewBounds="true"
        android:scaleType="center"
        app:layout_constraintTop_toBottomOf="@+id/mainHeader"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="nothing"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/fiadhsoidhufgsdhagoiafhoigfhfuaohgojabviubgavaviugavpiadshuodgfousdahfoiuadgho_dgahosahoaidshdaosughdasgouhgaouhgadsoiuagdshuogdahogadhoadsighoifgdajsagdihaidgiagdshoiadgs"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>