<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".XOGame.XOPlayersNamed">

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/input_box_playerOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:autofillHints="emailAddress"
        android:background="@color/white"
        android:hint="@string/player_one_name"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

</com.google.android.material.textfield.TextInputLayout>
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <EditText
           android:id="@+id/input_box_playerTwo"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="5dp"
           android:autofillHints="emailAddress"
           android:background="@color/white"
           android:hint="@string/player_two_name"
           android:inputType="text"
           android:maxLines="1"
           android:textColor="@color/black"
           android:textColorHint="@color/black" />

   </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/StartGame_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/SecColor"
        android:text="@string/start_game"
        android:textColor="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>